Fix E2E in java 21.